--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title> NS | js-voice </title>
-		<meta name="description" content="Html to PDF, criar pdfs apartir de elemntos html"/>
-		<meta name="keywords" content=" javascript, javascript foreach, javascript map, javascript array, javascript substring, javascript switch, javascript tutorial," />
-		<meta name="author" content=" Nuno Santos"/>
+        <title>Nuno Santos | Html to Pdf</title>
+		<meta name="description" content="Nuno Santos html to pdf" />
+		<meta name="keywords" content="html, pdf, javascript, nuno, santos, nuno_santos, caldas_da_rainha, foz_do_arelho, frontend, front-end, webdesign, web, websites, webservices, freelancer, webfreelancer, webdesigner, newwebsite, queroumsite, portugal, webdesign portugal, webfreelancerportugal, websitesportugal, freelancerportugal, webdesignerportugal, webservicesportugal, slideshow, reveal, effect, animation, web design, template, demo" />
+		<meta name="author" content="nuno santos"/>
+		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" media="screen" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 	</head>
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>JAVASCRIPT<span class="ns-icon ns-icon-about" data-content="Html to PDF, criar pdfs apartir de elemntos html"></span></span>
+				<span>Nuno Santos<span class="ns-icon ns-icon-about" data-content="Html to PDF, criar pdfs apartir de elemntos html com pdfFromHTML framework"></span></span>
 				<h1>Html to Pdf</h1>
 				<nav>
-                    <a href="https://nunosantoswebdesigner.github.io/js-voice" class="ns-icon ns-icon-prev" data-info="Exercício Anterior"><span></span></a>
-					<a href="https://nunosantoswebdesigner.github.io/js-search" class="ns-icon ns-icon-next" data-info="Próximo Exercício"><span></span></a>
+                    <a href="https://nunosantoswebdesigner.github.io/searchtext" class="ns-icon ns-icon-prev" data-info="Anterior"><span></span></a>
+					<a href="https://nunosantoswebdesigner.github.io/elasticstack" class="ns-icon ns-icon-next" data-info="Seguinte"><span></span></a>
 					<a href="https://www.instagram.com/nunosantos_webdesigner/?hl=pt" target="_blank" class="ns-icon ns-icon-instagram" data-info="instagram"><span></span></a>
-					<a href="https://github.com/nunosantoswebdesigner" target="_blank" class="ns-icon ns-icon-github" data-info="github"><span></span></a>
+					<a href="https://github.com/nunosantoswebdesigner/htmltopdf" target="_blank" class="ns-icon ns-icon-github" data-info="github repo"><span></span></a>
 					<a href="mailto:nunosantoswebdesigner@gmail.com?Subject=Olá, tudo bem?" target="_top" class="ns-icon ns-icon-mail" data-info="email to nuno santos"><span></span></a>
 				</nav>
             </header>
@@ -44,7 +45,6 @@
                     </div>
                 </div>
             </div>
-            <p id="info" class="info"> Powerd by <a class="ns" href="https://nunosantos.ml"> © Nuno Santos 2019 </a></p>
         </div>
         <script src="js/jspdf.js"></script>
         <script src="js/jquery-2.1.3.js"></script>
